[package]
name = "clever-isa-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.2"
rocket = "0.4.11"
tokio = {version="1.20.0", features=["rt","rt-multi-thread","io-std"]}
async-channel="1.6.1"